# readarr-to-play-books

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  pyproject.toml  script.py
src/readarr_to_play_books/: cli.py  uploader.py
